[project]
name = "iml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "intel-tensorflow>=0.0.1",
    "keras>=3.13.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-image>=0.26.0",
    "tensorflow>=2.20.0",
    "tensorflow-keras>=0.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
